[project]
dynamic = ["version"]
name = "environment-framework"
license = "MIT"
license-files = { paths = ["LICENSE"] }
readme = "README.md"
description = "Loose building blocks to create agent-environment loops."
requires-python = ">=3.10"
authors = [
    { name = "Reto Barmettler"},
]
dependencies = [
    "gymnasium>=1.2.3",
    "pygame-ce>=2.5.7",
    "numpy<2.3.0; python_version <= '3.10'",
    "numpy; python_version > '3.10'",
]
classifiers =[
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]

[project.urls]
Source = "https://github.com/crzdg/environment-framework"

[project.optional-dependencies]
extra = [
    "opencv-python",
    "sb3_contrib>=2.0.0a1",
    "tqdm",
    "jupyterlab",
    "jupytext",
    "ipywidgets",
]
dev = [
    "hatch",
]
test = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
]
type = [
    "mypy",
    "types-PyYAML",
]
style = [
    "black",
    "isort",
]
lint = [
    "pylint",
]
ci = [
    "hatch",
    "hatch-regex-commit",
    "genbadge[all]",
]


[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/environment_framework", "version.py", "LICENSE", "README.md"]

[tool.hatch.build.targets.wheel]
packages = [
    "src/environment_framework"
]

[tool.hatch]
version.source = "regex_commit"
version.path = "version.py"
version.tag_sign = false

[tool.hatch.envs.style]
python = "3.14"
features = [
    "style"
]
scripts.check = [
  "- black --target-version py310 --check --diff src/",
  "isort --check-only --diff src/"
]
scripts.fmt = [
  "black --target-version py310 src/",
  "isort src/"
]

[tool.hatch.envs.dev]
features = [
    "lint", "type", "test"
]
scripts.lint = "pylint --recursive=True src/"
scripts.typing = "mypy src/"
scripts.cov = "pytest --cov-report=term-missing --cov-report xml:.coverage.xml --cov-config=pyproject.toml --cov=environment_framework --junitxml=.junit.xml {args}"
scripts.no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.dev.matrix]]
python = [
    "310", "311", "312", "313", "314"
]

[tool.hatch.envs.tools]
python = "3.10"
scripts.update = "pip-compile {args} pyproject.toml"
dependencies = [
    "pip-tools"
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

